--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -8,7 +8,9 @@
                 <input name="item_text" id="id_new_item" name="Enter a to-do item" placeholder="Enter a to-do item">
                 {% csrf_token %}
         <table id="id_list_table">
-            <tr><td>1: {{ new_item_text }}</td></tr>
+            {% for item in items %}
+            <tr><td>1: {{ item.text }}</td></tr>
+            {% endfor %}
             </table>
             </form>
     </body>
