--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -9,7 +9,7 @@
                 {% csrf_token %}
         <table id="id_list_table">
             {% for item in items %}
-            <tr><td>1: {{ item.text }}</td></tr>
+            <tr><td>{{forloop.counter}}: {{ item.text }}</td></tr>
             {% endfor %}
             </table>
             </form>
